<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <variable
            name="viewModel"
            type="com.cornershop.counterstest.presentation.viewmodels.SharedViewModel" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:backgroundTint="@color/white">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btClose"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/selectableItemBackgroundBorderless"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_close" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="173dp"
                    android:layout_height="54dp"
                    android:layout_marginTop="2dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/create_counter"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btClose"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btNewCounter"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/save"
                    android:textColor="@color/orange"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/cpNewCounter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="24dp"
                    android:indeterminate="true"
                    android:visibility="gone"
                    app:indicatorSize="28dp"
                    app:layout_constraintBottom_toBottomOf="@+id/btNewCounter"
                    app:layout_constraintEnd_toEndOf="@+id/btNewCounter"
                    app:layout_constraintTop_toTopOf="@+id/btNewCounter" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.AppBarLayout>





        <com.google.android.material.textfield.TextInputLayout

            style="@style/Theme.CountersNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/counter_name_label"
            app:expandedHintEnabled="false"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="12dp"
            app:errorEnabled="true"
            app:boxStrokeColor="@color/orange">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textNewCounter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/counter_name_hint"
                android:text="@={viewModel.text}"
                app:boxStrokeColor="@color/orange" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvExamples"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/create_counter_disclaimer"
            android:textColor="@color/gray"
            android:textColorLink="@color/gray" />

</LinearLayout>
</layout>



